--- a/voting/package.json
+++ b/voting/package.json
@@ -12,6 +12,7 @@
     "react": "^16.2.0",
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
     "react-scripts": "1.1.1",
     "react-stack": "^1.2.2",
     "react-swipeable-views": "^0.12.12"
